--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,55 @@
-node_modules
-dist
+# Node.js dependencies
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+/dist
+/build
+/.cache
+/out
+/.next
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Debug files
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+.idea
+.vscode
+*.swp
+*.swo
+
+# TypeScript build info
+*.tsbuildinfo
+
+# Drizzle migrations
+/drizzle
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Replit related
+.config/
+.upm/
