--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-Migrate==4.0.4
-Flask-JWT-Extended==4.5.2
-Flask-Cors==4.0.0
-python-dotenv==1.0.0
-psycopg2-binary==2.9.7
-gunicorn==21.2.0
-Werkzeug==2.3.7
+Flask
+Flask-SQLAlchemy
+Flask-Migrate
+Flask-JWT-Extended
+Flask-Cors
+python-dotenv
+psycopg2-binary
+gunicorn
+Werkzeug
